tests/_resources/error_gcns/E002_unclosed_brace.gcn
# Missing closing brace for block
block HOUSEHOLD {
    identities {
        Y[] = C[] + I[];
    };
